<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityPaises"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondoPrincipal"
    tools:context=".JuegoDeAciertos">

    <TextView
        android:id="@+id/tituloPaises"
        style="@style/Titulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBttnPrnPaises"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/descripPaises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txtExplAciertos"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="@+id/tituloPaises"
        app:layout_constraintStart_toStartOf="@+id/tituloPaises"
        app:layout_constraintTop_toBottomOf="@+id/tituloPaises" />

    <TextView
        android:id="@+id/lblPaisUsuario"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/fragmentPrinPaises"
        app:layout_constraintStart_toStartOf="@+id/fragmentPrinPaises"
        app:layout_constraintTop_toBottomOf="@+id/fragmentPrinPaises" />

    <TextView
        android:id="@+id/lblCapUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/lblPaisUsuario"
        app:layout_constraintEnd_toEndOf="@+id/fragmentPrinCapitales"
        app:layout_constraintStart_toStartOf="@+id/fragmentPrinCapitales"
        app:layout_constraintTop_toTopOf="@+id/lblPaisUsuario" />

    <Button
        android:id="@+id/bttnVerificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="verificarPaisCap"
        android:text="@string/txtBttnVerifPaises"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPaisUsuario" />

    <ImageView
        android:id="@+id/imagenResultadoPaises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/activityPaises"
        app:layout_constraintTop_toBottomOf="@+id/bttnVerificar"
        app:srcCompat="@android:drawable/menuitem_background" />

    <fragment
        android:id="@+id/fragmentPrinPaises"
        android:name="com.example.fagmentosandroid.PaisFragment"
        android:layout_width="120dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentPrinCapitales"
        app:layout_constraintEnd_toStartOf="@+id/fragmentPrinCapitales"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragmentPrinCapitales" />

    <fragment
        android:id="@+id/fragmentPrinCapitales"
        android:name="com.example.fagmentosandroid.CapitalFragment"
        android:layout_width="120dp"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fragmentPrinPaises"
        app:layout_constraintTop_toBottomOf="@+id/descripPaises" />

</androidx.constraintlayout.widget.ConstraintLayout>